artifact entity changes